# qef

./: Cargo.toml  README.md
examples/: sdf_uniform_grid.rs  vertex_placement.rs
src/: lib.rs
