[package]
name = "qef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"

[dev-dependencies]
approx = "0.5"
smooth-bevy-cameras = "0.8"

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "x11"]

[dev-dependencies.bevy_polyline]
version = "0.6"

[[example]]
name = "vertex_placement"
path = "examples/vertex_placement.rs"
required-features = ["nalgebra/glam023"]

[[example]]
name = "sdf_uniform_grid"
path = "examples/sdf_uniform_grid.rs"
required-features = ["nalgebra/glam023"]
